# aoc

./: .gitignore  Cargo.toml
src/: macros.rs  main.rs  runner.rs  year_2022.rs
src/year_2022/: day02.rs
