[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_of_code = { version = "0.1.0", path = "../advent_of_code_lib" }
clap = "4.0.29"
nom = "7.1.1"
serde_cbor = "0.11.2"
serde_json = "1.0.89"
thiserror = "1.0.37"
